# ai-factory-pipeline

./: .env.example  .gitignore  AUDIT_ARTIFACTS_INDEX.md  AUDIT_SESSION_REPORT.md  AUDIT_VERIFICATION.md  Dockerfile  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_STATUS.md  Makefile  PHASE_0_REALITY_REPORT.md  PHASE_0_REALITY_REPORT_V13.md  PHASE_0_REALITY_REPORT_V14.md  PHASE_0_REALITY_REPORT_V15.md  PHASE_10_STATUS.md  PHASE_1_STATUS.md  PHASE_2_STATUS.md  PHASE_3_STATUS.md  PHASE_4_STATUS.md  PHASE_5_STATUS.md  PHASE_6_STATUS.md  PHASE_7_STATUS.md  PHASE_8_STATUS.md  PHASE_9_STATUS.md  PHASE_REAL_PRODUCTION_REPORT.md  QUICK_AUDIT_SUMMARY.md  README.md  TRACEABILITY_V5815_PHASE7.md  cloudbuild.yaml  fly.toml  pyproject.toml  render.yaml  requirements.txt  test_results_fresh.txt  test_results_initial.txt
diagnostics/: diagnosis_log.txt
docs/: ADR_INDEX.md  ARCHITECTURE.md  OPERATOR_GUIDE.md  ROLLBACK_RUNBOOK.md  testing.md
factory/: .env.example  Dockerfile  __init__.py  app.py  cli.py  config.py  main.py  orchestrator.py
main_documents/: v5.6_AI_Factory_Pipeline-Specifications_Document.md
scripts/: __init__.py  activate_pipeline.sh  create_artifact_bucket.sh  deploy_fly.sh  deploy_hf_spaces.sh  deploy_koyeb.sh  deploy_render.sh  janitor.py  migrate_neo4j.py  migrate_supabase.py  migrate_v36_to_v54.py  run_bot.py  setup_cloud_scheduler.sh  setup_ghcr.sh  setup_secrets.py  validate_project.py
tests/: conftest.py  test_app_name_extraction.py  test_axis_state_sync.py  test_chain_policy.py  test_concurrency.py  test_config.py  test_core.py  test_credentials.py  (+67 more)
(+446 files in other folders)
