[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ai-factory-pipeline"
version = "5.8.0"
description = "AI Factory Pipeline v5.8 — Autonomous App Factory"
requires-python = ">=3.11"

[project.scripts]
factory-cli = "factory.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
timeout = 120

[tool.ruff]
line-length = 100
